added spice blow nexus

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,15 +2,15 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://GameAssets/", "res://GameAssets/PhaseManager/", "res://GameAssets/PhaseManager/Phases/", "res://GameAssets/GlobalScripts/", "res://GameAssets/GameBoard/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://GameAssets/", "res://GameAssets/PhaseManager/", "res://GameAssets/GlobalScripts/", "res://GameAssets/GameBoard/", "res://GameAssets/Entities/", "res://ArtAssets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=297
+dock_hsplit_2=355
 dock_hsplit_3=-468
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://GameAssets/PhaseManager/phase_manager.tscn", "res://GameAssets/PhaseManager/Phases/storm_manager.tscn", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.tscn", "res://GameAssets/GameBoard/board.tscn")
-current_scene="res://GameAssets/GameBoard/board.tscn"
+open_scenes=PackedStringArray("res://GameAssets/PhaseManager/phase_manager.tscn", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.tscn", "res://GameAssets/GameBoard/board.tscn", "res://GameAssets/GameBoard/board_position.tscn", "res://GameAssets/GameBoard/spice_spawn.tscn", "res://GameAssets/Entities/spice.tscn", "res://GameAssets/GameBoard/territory.tscn")
+current_scene="res://GameAssets/GameBoard/board_position.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,16 +43,16 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://GameAssets/GlobalScripts/boardState.gd", "res://GameAssets/GlobalScripts/globalDictionaries.gd", "res://GameAssets/GlobalScripts/globalSignals.gd", "res://GameAssets/PhaseManager/phase_manager.gd", "res://PositionResource.gd", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.gd", "res://GameAssets/PhaseManager/Phases/storm_manager.gd"]
-selected_script=""
-open_help=["@GDScript", "@GlobalScope", "Area2D", "Array", "CollisionPolygon2D", "Dictionary", "ItemList", "Label", "Signal"]
+open_scripts=["res://GameAssets/GlobalScripts/boardState.gd", "res://GameAssets/GameBoard/board_position.gd", "res://GameAssets/GlobalScripts/globalDictionaries.gd", "res://GameAssets/GlobalScripts/globalSignals.gd", "res://GameAssets/PhaseManager/phase_manager.gd", "res://GameAssets/GameBoard/sector.gd", "res://GameAssets/Entities/spice.gd", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.gd", "res://GameAssets/GameBoard/spice_spawn.gd", "res://GameAssets/PhaseManager/Phases/storm_manager.gd", "res://GameAssets/GameBoard/territory.gd"]
+selected_script="res://GameAssets/GameBoard/board_position.gd"
+open_help=["Area2D", "Array", "CollisionPolygon2D", "Dictionary", "ItemList", "Label", "Marker2D", "Node", "Node2D", "Signal", "TextureRect", "Variant"]
 script_split_offset=246
 list_split_offset=0
-zoom_factor=0.785714
+zoom_factor=0.928571
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 151, 1164, 695)
+floating_window_rect=Rect2i(698, 331, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
