--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://3vs47je5fgkw", "uid://cltfhb6aacbt0")
+PackedScene=PackedStringArray("uid://dafb2itiwdg7w", "uid://dkt0bmfopfky4", "uid://dw6j42xwjjfcj", "uid://q1niiex70n0c", "uid://3vs47je5fgkw", "uid://cltfhb6aacbt0")
