--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,1 @@
-list=[{
-"base": &"Resource",
-"class": &"positionResource",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://PositionResource.gd"
-}]
+list=[]
