added Spice Blow system

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=2
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://GameAssets/", "res://GameAssets/PhaseManager/", "res://GameAssets/GlobalScripts/", "res://GameAssets/GameBoard/", "res://GameAssets/Entities/", "res://ArtAssets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://GameAssets/", "res://GameAssets/PhaseManager/", "res://GameAssets/GlobalScripts/", "res://GameAssets/GameBoard/", "res://GameAssets/Entities/", "res://ArtAssets/", "res://ArtAssets/BoardPieces/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://GameAssets/PhaseManager/phase_manager.tscn", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.tscn", "res://GameAssets/GameBoard/board.tscn", "res://GameAssets/GameBoard/board_position.tscn", "res://GameAssets/GameBoard/spice_spawn.tscn", "res://GameAssets/Entities/spice.tscn", "res://GameAssets/GameBoard/territory.tscn")
-current_scene="res://GameAssets/GameBoard/board_position.tscn"
+open_scenes=PackedStringArray("res://GameAssets/PhaseManager/phase_manager.tscn", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.tscn", "res://GameAssets/GameBoard/board.tscn", "res://GameAssets/GameBoard/board_position.tscn", "res://GameAssets/Entities/spice.tscn", "res://GameAssets/GameBoard/positions.tscn")
+current_scene="res://GameAssets/GameBoard/board.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,9 +43,9 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://GameAssets/GlobalScripts/boardState.gd", "res://GameAssets/GameBoard/board_position.gd", "res://GameAssets/GlobalScripts/globalDictionaries.gd", "res://GameAssets/GlobalScripts/globalSignals.gd", "res://GameAssets/PhaseManager/phase_manager.gd", "res://GameAssets/GameBoard/sector.gd", "res://GameAssets/Entities/spice.gd", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.gd", "res://GameAssets/GameBoard/spice_spawn.gd", "res://GameAssets/PhaseManager/Phases/storm_manager.gd", "res://GameAssets/GameBoard/territory.gd"]
-selected_script="res://GameAssets/GameBoard/board_position.gd"
-open_help=["Area2D", "Array", "CollisionPolygon2D", "Dictionary", "ItemList", "Label", "Marker2D", "Node", "Node2D", "Signal", "TextureRect", "Variant"]
+open_scripts=["res://GameAssets/GlobalScripts/boardState.gd", "res://GameAssets/GameBoard/board_position.gd", "res://GameAssets/GlobalScripts/globalDictionaries.gd", "res://GameAssets/GlobalScripts/globalSignals.gd", "res://GameAssets/PhaseManager/phase_manager.gd", "res://GameAssets/GameBoard/sector.gd", "res://GameAssets/Entities/spice.gd", "res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.gd", "res://GameAssets/PhaseManager/Phases/storm_manager.gd", "res://GameAssets/GameBoard/territory.gd"]
+selected_script="res://GameAssets/PhaseManager/Phases/spice_blow_nexus_manager.gd"
+open_help=["Area2D", "Array", "CollisionPolygon2D", "Dictionary", "ItemList", "Label", "Marker2D", "Node", "Node2D", "RayCast2D", "SceneTree", "Signal", "TextureRect", "Variant"]
 script_split_offset=246
 list_split_offset=0
 zoom_factor=0.928571
