fixed spiceBlowNexus phase

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
-"folded_lines": Array[int]([69, 97, 117]),
-"h_scroll_position": 0,
-"row": 106,
-"scroll_position": 68.0,
+"column": 73,
+"folded_lines": Array[int]([5, 12, 23, 27, 46, 77]),
+"h_scroll_position": 15,
+"row": 60,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([11, 461]),
 "h_scroll_position": 0,
 "row": 487,
-"scroll_position": 437.0,
+"scroll_position": 447.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 41,
 "folded_lines": Array[int]([32, 77]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,10 +73,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 58,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
