--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://GameAssets/", "res://GameAssets/PhaseManager/", "res://GameAssets/GlobalScripts/", "res://GameAssets/GameBoard/", "res://GameAssets/Entities/", "res://ArtAssets/", "res://ArtAssets/BoardPieces/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -52,7 +52,7 @@ zoom_factor=0.928571
 
 [GameView]
 
-floating_window_rect=Rect2i(698, 331, 1164, 695)
+floating_window_rect=Rect2i(378, 151, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
